# ticketleader

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: eb6d6f1a1f79_init.py
backend/backend/: main.py  models.py  settings.py
backend/tests/: test_main.py  test_models.py
