[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jon Robison <narfman0@blastedstudios.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlmodel = "^0.0.20"
sqlalchemy = "^2.0.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"